@@ -93,6 +93,7 @@ bool P1MeterTCP::StopHardware()
 			//Don't throw from a Stop command
 		}
 	}
+	m_bIsStarted=false;
 	return true;
 }
 
