@@ -71,6 +71,7 @@ bool RFXComSerial::StopHardware()
 			//Don't throw from a Stop command
 		}
 	}
+	m_bIsStarted=false;
 	return true;
 }
 
