@@ -94,6 +94,7 @@ bool RFXComTCP::StopHardware()
 			//Don't throw from a Stop command
 		}
 	}
+	m_bIsStarted=false;
 	return true;
 }
 
