@@ -102,6 +102,7 @@ bool S0MeterTCP::StopHardware()
 			//Don't throw from a Stop command
 		}
 	}
+	m_bIsStarted=false;
 	return true;
 }
 
