@@ -16,7 +16,8 @@ Version 1.0.xxxx (December xxth 2013)
 - Fixed: Day string logging for the DT1 - RTGR328N device
 - Implemented: Dashboard, clicking on a Motion/Dusk/Rain sensor icon will display the log
 - Fixed: RFXtrx hardware can now also be compiled/used accross big-little endianess systems
-- Support for OpenHardwareMonitor supplied sensor data in Windows version of Domoticz. See wiki for info.
+- Implemented: Windows, Support for OpenHardwareMonitor supplied sensor data in Windows version of Domoticz. See wiki for info
+- Fixed: Hardware started/stopped state, should fix the double starting of hardware
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
